feat: add csv datasets