@@ -1,13 +1,12 @@
-package mochotexto.dataset.schema.json;
+package mochotexto.dataset.schema.csv;
 
-import com.fasterxml.jackson.annotation.JsonProperty;
+import com.fasterxml.jackson.annotation.JsonIgnore;
+import com.fasterxml.jackson.annotation.JsonPropertyOrder;
 import lombok.NoArgsConstructor;
 import lombok.Setter;
 import lombok.ToString;
-import mochotexto.dataset.mapper.JsonDatasetMapper;
-import mochotexto.parsing.util.ParsingUtils;
+import mochotexto.dataset.mapper.CsvDatasetMapper;
 
-import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
@@ -15,115 +14,108 @@ import java.util.Map;
 @NoArgsConstructor
 @Setter
 @ToString
-public class DebigaDisfoldSchema implements JsonDatasetMapper {
-
-	@JsonProperty("name")
+@JsonPropertyOrder({"_id", "_name", "_website", "_locations", "_size", "_industry", "_founded"})
+public class DddTeamblindSchema implements CsvDatasetMapper {
+	private String _id;
 	private String _name;
-
-	@JsonProperty("market_cap")
-	private String _marketCap;
-
-	@JsonProperty("stock")
-	private String _stock;
-
-	@JsonProperty("country")
-	private String _country;
-
-	@JsonProperty("sector")
-	private String _sector;
-
-	@JsonProperty("industry")
+	private String _website;
+	private String _locations;
+	private String _size;
 	private String _industry;
-
-	@JsonProperty("headquarters")
-	private String _headquarters;
-
-	@JsonProperty("founded")
 	private String _founded;
 
-	@JsonProperty("employees")
-	private String _employees;
-
-	@JsonProperty("ceo")
-	private String _ceo;
-
-
 	@Override
+	@JsonIgnore
 	public String getName() {
 		return _name;
 	}
 
 	@Override
+	@JsonIgnore
 	public String getStocksName() {
-		return _stock;
+		return null;
 	}
 
 	@Override
+	@JsonIgnore
 	public List<String> getSectors() {
-		return ParsingUtils.makeSanitizedStringList(_sector, _industry);
+		return _industry != null ? List.of(_industry) : Collections.emptyList();
 	}
 
 	@Override
+	@JsonIgnore
 	public String getCountry() {
-		return _country;
+		return null;
 	}
 
 	@Override
+	@JsonIgnore
 	public Float getSharePriceUSD() {
 		return null;
 	}
 
 	@Override
+	@JsonIgnore
 	public String getFoundedOn() {
 		return _founded;
 	}
 
 	@Override
+	@JsonIgnore
 	public List<String> getFounders() {
 		return Collections.emptyList();
 	}
 
 	@Override
+	@JsonIgnore
 	public Integer getEmployeesCount() {
-		return ParsingUtils.sanitizeInteger(_employees);
+		return null;
 	}
 
 	@Override
+	@JsonIgnore
 	public List<String> getCeo() {
-		return _ceo != null ? List.of(_ceo) : Collections.emptyList();
+		return Collections.emptyList();
 	}
 
 	@Override
+	@JsonIgnore
 	public String getHeadquartersLocation() {
-		return _headquarters;
+		return _locations;
 	}
 
 	@Override
+	@JsonIgnore
 	public String getTopCompetitor() {
 		return null;
 	}
 
 	@Override
+	@JsonIgnore
 	public String getTelephoneNumber() {
 		return null;
 	}
 
 	@Override
+	@JsonIgnore
 	public Map<String, Integer> getFollowersBySocial() {
 		return Collections.emptyMap();
 	}
 
 	@Override
+	@JsonIgnore
 	public List<String> getUrls() {
-		return Collections.emptyList();
+		return _website != null ? List.of(_website) : Collections.emptyList();
 	}
 
 	@Override
+	@JsonIgnore
 	public Long getMarketCapitalization2022USD() {
-		return ParsingUtils.sanitizeCurrencyLong(_marketCap);
+		return null;
 	}
 
 	@Override
+	@JsonIgnore
 	public Long getRevenue2022USD() {
 		return null;
 	}
